# gr-tagutils

./: CMakeLists.txt  README.md
cmake/Modules/: tagutilsConfig.cmake
docs/: README.tagutils
docs/doxygen/: Doxyfile.in
docs/doxygen/other/: group_defs.dox  main_page.dox
examples/: add_tag_at_offset.grc  length_based_processing.grc  snr_based_decode.grc  tag_to_byte_example.grc  top_block.py
grc/: CMakeLists.txt  CMakeLists.txt~  tagutils_add_tag_at_offset.xml  tagutils_add_tag_at_offset.xml~  tagutils_stream_to_tagged_stream_sourced.xml  tagutils_stream_to_tagged_stream_sourced.xml~  tagutils_tag_at_offset_XX.xml  tagutils_tag_extract_cc.xml  tagutils_tag_thresh_switch.xml~  tagutils_tag_to_byte_x.xml  tagutils_tag_to_byte_xb.xml  tagutils_tag_to_file.xml
include/tagutils/: CMakeLists.txt  add_tag_at_offset.h  add_tag_at_offset.h~  api.h  stream_to_tagged_stream_sourced.h  stream_to_tagged_stream_sourced.h~  tag_at_offset_XX.h.t  tag_extract_cc.h  tag_thresh_switch.h  tag_thresh_switch.h~  tag_to_byte.h~  tag_to_byte_Xb.h.t  tag_to_byte_b.h  tag_to_byte_b.h~  tag_to_byte_c.h~  tag_to_byte_f.h  tag_to_byte_f.h~
lib/: CMakeLists.txt  add_tag_at_offset_impl.cc  add_tag_at_offset_impl.h  qa_tagutils.cc  qa_tagutils.h  tag_at_offset_XX_impl.cc.t  tag_at_offset_XX_impl.h.t  tag_extract_cc_impl.cc  tag_extract_cc_impl.h  tag_thresh_switch_impl.cc  tag_thresh_switch_impl.h  tag_to_byte_Xb_impl.cc.t  tag_to_byte_Xb_impl.h.t  tag_to_byte_b_impl.cc  tag_to_byte_b_impl.h  tag_to_byte_c_impl.cc  tag_to_byte_c_impl.h  tag_to_byte_f_impl.cc  tag_to_byte_f_impl.h  test_tagutils.cc
python/: CMakeLists.txt  __init__.py  qa_stream_to_tagged_stream_sourced.py  qa_tag_thresh_switch.py  tag_to_file.py
swig/: CMakeLists.txt  tagutils_swig.i
